@@ -1,9 +1,10 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
-TODO: accept() documentation
+TODO: ABI??? API????? Changes???
 	- ev_embed_stop did not correctly stop the watcher (very good
           testcase by Vladimir Timofeev).
 	- applied win32 fixes by Michael Lenaghan (also James Mansion).
+	- replace EV_MINIMAL by EV_FEATURES.
         - remove dependency on sys/queue.h on freebsd (patch by Vanilla Hsu).
         - configure now prepends -O3, not appends it, so one can still
           override it.
